Change gear to 'menu' in text, correct spacing in menu

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -1,12 +1,13 @@
 .menu {
   width: 100%;
-  padding: 5px 0px;
   background-color: #454545;
   color: #F8F8F8;
+  height: 30px;
 
   .logo {
     font-family: "VT323", monospace;
     font-size: 20px;
+    line-height: 30px;
     margin-left: 5px;
 
     a {
@@ -21,14 +22,14 @@
 
   #settings-toggle {
     float: right;
-    line-height: 19px;
-    font-size: 20px;
+    font-size: 0.9em;
+    background-color: #2E2E2E;
+    height: 16px;
+    padding: 7px;
 
     a {
       text-decoration: none;
       color: #F8F8F8;
-      padding: 3px 10px 4px 10px;
-      background-color: #2E2E2E;
 
       &:visited {
         color: #F8F8F8;
